# nhire

./: README.md  nhire.cabal
.stack-work/install/x86_64-linux/lts-8.16/8.0.2/flag-cache/: exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  mmorph-1.0.9-5bASEvmIkr5CpdAYXwPsn0  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  pipes-4.3.4-IzZdzyWEw6TEBmgi7OaP91  regex-base-0.93.2-AYjYAsBidAc8f5XNm9b2Aa  regex-compat-0.95.1-7IGKoiHTSKL3opdpEZ0pO8  regex-posix-0.95.2-KQJt29lnRa45d6bFn9XkFO  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  void-0.7.2-4PWwLjXxAER9U3zGpDhf6e
.stack-work/install/x86_64-linux/lts-8.16/8.0.2/lib/x86_64-linux-ghc-8.0.2/nhire-0.1.0.0-LujRWBlevUUL0QEIKjqvQa/: Order.dyn_hi  Order.hi
.stack-work/install/x86_64-linux/lts-8.16/8.0.2/pkgdb/: nhire-0.1.0.0-LujRWBlevUUL0QEIKjqvQa.conf  package.cache
app/: Main.hs
src/: Order.hs
