name:                nhire
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/nhire#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Data-Dir: data
Data-Files:
  market_a.csv
  market_b.csv
  market_c.csv

library
  hs-source-dirs:      src
  exposed-modules:     Order
  build-depends:       base >= 4.7 && < 5, directory, regex-compat, pipes
  default-language:    Haskell2010

executable nhire-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nhire, directory, regex-compat, pipes
  default-language:    Haskell2010

test-suite nhire-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nhire
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nhire
